<resources>
    <string name="app_name">PhotoApp</string>
    <string name="defaultGreeting">Bem Vindo,</string>
    <string name="defaultUserName">Fulano(a)</string>
    <string name="timelineHeadingBig_text">ÚLTIMAS FOTOS</string>
    <string name="timelineHeadingSmall_text">Timeline</string>
    <string name="ver_perfil">Ver Perfil</string>
    <string name="salvar">Salvar</string>
</resources>