<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="0dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="9dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_light"
                android:text="@string/defaultGreeting"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_extrabold"
                android:text="@string/defaultUserName"
                android:textSize="16sp"
                android:textStyle="italic" />
        </LinearLayout>


        <Button
            android:id="@+id/profileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="13dp"
            android:fontFamily="@font/inter_light"
            android:onClick="goToProfile"
            android:text="@string/ver_perfil" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/gray6"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timelineHeadingSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_light"
                android:text="@string/timelineHeadingSmall_text"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/timelineHeadingBig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_extrabold"
                android:text="@string/timelineHeadingBig_text"
                android:textSize="20sp"
                android:textStyle="italic" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/image_1" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/image_2" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/image_3" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>